Revise README for clarity and improved structure
Updated README.md to enhance clarity and structure, including better descriptions of examples and running instructions.