@@ -1,52 +1,31 @@
 # Basic TailwindFX Example App
 
-## Overview
-This project is a beginner-friendly example application created with TailwindFX and JavaFX.
-
-The purpose of this example is to help new developers understand how TailwindFX components and utility-based styling can be used to build modern JavaFX interfaces.
-
-This example includes:
-- A Basic Login Form
-- A Basic Dashboard Layout
-
-These examples are designed to be simple, readable, and easy to modify for learning purposes.
+A beginner-friendly example project built with **TailwindFX** and **JavaFX**, demonstrating how to use TailwindFX utility classes to create modern, clean UI interfaces.
 
 ---
 
-# Features
+## Included Examples
 
-## Basic Login Example
-The login example demonstrates:
-- Welcome heading
-- Subtitle text
-- Email input field
-- Password input field
-- Login button
-- Forgot Password link
-- Centered card-style layout
-
-### File:
-src/main/java/io/github/yasmramos/tailwindfx/examples/BasicLoginExample.java
+| Example | Description |
+|---|---|
+| **Basic Login Form** | Email, password, login button, forgot password |
+| **Basic Dashboard** | Sidebar, stats cards, accordion/collapse sections |
 
 ---
 
-## Basic Dashboard Example
-The dashboard example demonstrates:
-- Sidebar navigation
-- Dashboard menu buttons
-- Welcome header
-- Statistics cards (Sales, Users, Orders)
-- Analytics section
-- Reports section
-- Accordion / Collapse component usage
+## Screenshots
 
-### File:
-src/main/java/io/github/yasmramos/tailwindfx/examples/BasicDashboardExample.java
+### Login Example
+![Login Example](https://raw.githubusercontent.com/keshavsharma0614-blip/tailwindfx/main/examples/basic-app/login-example.png)
+
+### Dashboard Example
+![Dashboard Example](https://raw.githubusercontent.com/keshavsharma0614-blip/tailwindfx/main/examples/basic-app/dashboard-example.png)
 
 ---
 
-# Project Structure
+## Project Structure
 
+```
 examples/basic-app/
 ├── README.md
 ├── login-example.png
@@ -55,112 +34,92 @@ examples/basic-app/
 src/main/java/io/github/yasmramos/tailwindfx/examples/
 ├── BasicLoginExample.java
 └── BasicDashboardExample.java
+```
 
 ---
-
-# How to Run
 
 ## Requirements
-Before running the project, make sure you have:
+
 - Java JDK 17 or higher
 - JavaFX SDK
-- IntelliJ IDEA / Eclipse / VS Code with Java support
+- IntelliJ IDEA (recommended) or any Java-supported IDE
 
 ---
 
-## Running the Login Example
-1. Open the project in your IDE
-2. Navigate to:
-   src/main/java/io/github/yasmramos/tailwindfx/examples/
-3. Open:
-   BasicLoginExample.java
-4. Run the main method
+## How to Run
+
+### Step 1 — Clone the Repository
+```bash
+git clone https://github.com/yasmramos/tailwindfx.git
+cd tailwindfx
+```
+
+### Step 2 — Configure JavaFX in Your IDE
+
+In IntelliJ IDEA, go to **Run → Edit Configurations → Modify Options → Add VM Options** and paste:
+
+```
+--module-path "path/to/javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml
+```
+
+Replace `path/to/javafx-sdk/lib` with your actual JavaFX SDK path, for example:
+```
+--module-path "C:\javafx-sdk-26\lib" --add-modules javafx.controls,javafx.fxml
+```
+
+### Step 3 — Run the Examples
+
+**Login Example:**
+```
+src/main/java/io/github/yasmramos/tailwindfx/examples/BasicLoginExample.java
+```
+Right-click → **Run 'BasicLoginExample.main()'**
+
+**Dashboard Example:**
+```
+src/main/java/io/github/yasmramos/tailwindfx/examples/BasicDashboardExample.java
+```
+Right-click → **Run 'BasicDashboardExample.main()'**
 
 ---
 
-## Running the Dashboard Example
-1. Open the project in your IDE
-2. Navigate to:
-   src/main/java/io/github/yasmramos/tailwindfx/examples/
-3. Open:
-   BasicDashboardExample.java
-4. Run the main method
+## TailwindFX Integration
+
+These examples use TailwindFX the correct way — no inline `setStyle()`:
+
+```java
+// Install TailwindFX styles on the scene
+TailwindFX.install(scene);
+
+// Apply utility classes to nodes
+TailwindFX.apply(loginButton, "btn-primary", "rounded-lg");
+TailwindFX.apply(root, "bg-gray-50", "border", "rounded-xl");
+TailwindFX.apply(title, "text-2xl", "font-bold");
+```
 
 ---
 
-# Screenshots
+## Troubleshooting
 
-## Login Example Output
-Place your login screenshot in this folder:
-examples/basic-app/login-example.png
+**JavaFX runtime components are missing**
+→ Make sure your VM Options include `--module-path` and `--add-modules javafx.controls,javafx.fxml`
 
-Then it will display below:
+**TailwindFX styles not applying**
+→ Confirm `TailwindFX.install(scene)` is called after `new Scene(...)` and before `stage.show()`
 
-<img width="503" height="617" alt="Screenshot 2026-04-28 202115" src="https://github.com/user-attachments/assets/d11d15cf-eff0-4fd9-8ae9-7b105125fdbf" />
-![Login Example]
-
-
----
-
-## Dashboard Example Output
-Place your dashboard screenshot in this folder:
-examples/basic-app/dashboard-example.png
-
-Then it will display below:
-
-<img width="1170" height="750" alt="Screenshot 2026-04-28 202302" src="https://github.com/user-attachments/assets/1f23be7c-3312-4d5e-914b-8bfc6653cd42" />
-![Dashboard Example]
-
+**Old UI still showing after code changes**
+→ Save all files (Ctrl+S), then go to **Build → Rebuild Project**, and re-run
 
 ---
 
-# Screenshot Guide (Important for Beginners)
+## Purpose
 
-## Login Screenshot:
-Take a screenshot when the login window is running and visible.
-
-Recommended:
-- Welcome Back title visible
-- Email field visible
-- Password field visible
-- Login button visible
-
-Save as:
-login-example.png
+This project helps developers:
+- Understand how to set up and install TailwindFX
+- Learn utility-first styling in JavaFX applications
+- See real working examples of login and dashboard layouts
+- Use `TailwindFX.apply()` instead of traditional inline styles
 
 ---
 
-## Dashboard Screenshot:
-Take a screenshot when the dashboard window is running and visible.
-
-Recommended:
-- Sidebar visible
-- Welcome text visible
-- Stats cards visible
-- Analytics / Reports section visible
-
-Save as:
-dashboard-example.png
-
----
-
-# Learning Purpose
-This example is created to:
-- Help beginners understand TailwindFX structure
-- Demonstrate reusable JavaFX UI layouts
-- Show how Tailwind-inspired styling can improve JavaFX projects
-- Provide a foundation for larger projects
-
----
-
-# Notes
-- Keep screenshots inside the `examples/basic-app/` folder
-- Make sure screenshot filenames match exactly:
-  - login-example.png
-  - dashboard-example.png
-- If screenshots are missing, README image preview may not display correctly
-
----
-
-# Conclusion
-This project serves as a simple starting point for developers who want to learn TailwindFX by building practical JavaFX interfaces such as login screens and dashboards.
+*Part of the [TailwindFX](https://github.com/yasmramos/tailwindfx) open-source project.*
